--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   mysql:
     image: mysql:8.3
     ports:
-      - "3306:3306"
+      - "3316:3316"
     volumes:
       - ./.services/database:/var/lib/mysql/
     environment:
@@ -19,14 +19,14 @@ services:
       - "8000:80"
     volumes:
       - ./.services/wordpress:/var/www/html
-      - ./.services/plugin:/var/www/html/wp-content/plugins/theme-core-plugin
-      - ./.services/theme:/var/www/html/wp-content/themes/custom-theme
+      - ./plugin:/var/www/html/wp-content/plugins/client-first-12-core-plugin
+      - ./theme:/var/www/html/wp-content/themes/client-first-12-theme
     environment:
       WORDPRESS_DB_HOST: mysql
       WORDPRESS_DB_USER: myers
       WORDPRESS_DB_PASSWORD: root
       WORDPRESS_DB_NAME: wordpress
-      WORDPRESS_TABLE_PREFIX: wpsd
+      WORDPRESS_TABLE_PREFIX: wpsd_
   phpmyadmin:
     image: phpmyadmin:5.2
     depends_on:
